--- a/L2/dense_similarity_multi_kernel/Makefile
+++ b/L2/dense_similarity_multi_kernel/Makefile
@@ -43,7 +43,7 @@ help::
 TARGET ?= sw_emu
 
 # ################### Setting up default value of DEVICE ##############################
-DEVICE ?= xilinx_u50_gen3x16_xdma_201920_3
+DEVICE ?= xilinx_u55c_gen3x16_xdma_1_202110_1
 
 # ###################### Setting up default value of HOST_ARCH ####################### 
 HOST_ARCH ?= x86
@@ -54,7 +54,7 @@ $(error [ERROR]: This project is not supported for $(DEVICE).)
 endif
 
 # #################### Checking if DEVICE in whitelist ############################
-ifneq ($(findstring u50, $(DEVICE)), u50)
+ifneq ($(findstring u55, $(DEVICE)), u55)
 $(warning [WARNING]: This project has not been tested for $(DEVICE). It may or may not work.)
 endif
 
@@ -114,8 +114,8 @@ HOST_ARGS :=  -xclbin $(BUILD_DIR)/denseSimilarityKernel.xclbin -weight $(XFLIB_
 VPP_FLAGS += -t $(TARGET) --platform $(XPLATFORM) --save-temps --optimize 2
 VPP_FLAGS += --hls.jobs 8
 VPP_LDFLAGS += --vivado.synth.jobs 8 --vivado.impl.jobs 8
-ifneq (,$(shell echo $(XPLATFORM) | awk '/u50/'))
-VPP_FLAGS += --config $(CUR_DIR)/conn_u50_u280.cfg
+ifneq (,$(shell echo $(XPLATFORM) | awk '/u55/'))
+VPP_FLAGS += --config $(CUR_DIR)/conn_u50_u55c_u280.cfg
 endif
 
 VPP_FLAGS += -I$(XFLIB_DIR)/L1/include/hw
@@ -124,7 +124,7 @@ VPP_FLAGS += -I$(XFLIB_DIR)/L2/dense_similarity_multi_kernel/kernel
 
 denseSimilarityKernel_VPP_FLAGS +=  -D KERNEL_NAME=denseSimilarityKernel
 denseSimilarityKernel_VPP_FLAGS += --hls.clock 300000000:denseSimilarityKernel
-VPP_LDFLAGS_denseSimilarityKernel += --kernel_frequency 300
+VPP_LDFLAGS_denseSimilarityKernel += --kernel_frequency 250
 
 
 # Kernel args
