--- a/L2/dense_similarity_multi_kernel/conn_u50_u55c_u280.cfg
+++ b/L2/dense_similarity_multi_kernel/conn_u50_u55c_u280.cfg
@@ -1,3 +1,12 @@
+[vivado]
+param=project.writeIntermediateCheckpoints=1
+prop=run.impl_1.STEPS.OPT_DESIGN.ARGS.DIRECTIVE=Explore
+prop=run.impl_1.STEPS.PHYS_OPT_DESIGN.IS_ENABLED=true
+prop=run.impl_1.STEPS.PHYS_OPT_DESIGN.ARGS.DIRECTIVE=AggressiveExplore
+prop=run.impl_1.STEPS.ROUTE_DESIGN.ARGS.DIRECTIVE=AggressiveExplore
+prop=run.impl_1.{STEPS.ROUTE_DESIGN.ARGS.MORE OPTIONS}={-tns_cleanup}
+prop=run.impl_1.STEPS.POST_ROUTE_PHYS_OPT_DESIGN.IS_ENABLED=true
+
 [connectivity]
 sp=denseSimilarityKernel_0.m_axi_gmem4_0:HBM[24]
 
