--- a/louvainmod/Makefile
+++ b/louvainmod/Makefile
@@ -56,7 +56,7 @@ CCC = /usr/bin/g++
 CXX = /usr/bin/g++
 CXXFLAGS = -std=c++11 -DPRAGMA -Ofast -fopenmp -fmessage-length=0  -fPIC -Wall -Wno-unknown-pragmas -Wno-unused-label \
     -Wno-unused-variable -Wno-sign-compare -Wno-unused-result -Wno-unused-but-set-variable \
-    -Wno-narrowing -D USE_HBM -fmessage-length=0 -D LOUVAINMOD
+    -Wno-narrowing -D USE_U55C -fmessage-length=0 -D LOUVAINMOD
 
 # Define the target directories.
 
